<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yurihuallpavargasgmail.machupicchuyourself.fragmentoContenidoReservar">

  <LinearLayout
        android:gravity="center"
        android:id="@+id/llAddCar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:gravity="center"
          android:textStyle="bold"
          android:text="@string/Reservar_paquete"/>
        <LinearLayout
            android:paddingTop="20dp"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/reservar"/>
            <Button
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                    android:id="@+id/botonReservar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@drawable/bk_boton_plano"
                    android:stateListAnimator="@null"
                    android:text="@string/shop"/>

        </LinearLayout>

      <TextView
          android:paddingTop="20dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:gravity="center"
          android:textStyle="bold"
          android:text="@string/Pasajeros_paquete"/>
      <LinearLayout
          android:paddingBottom="5dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <LinearLayout
              android:paddingTop="20dp"
              android:id="@+id/spinnerLayout"
              android:layout_gravity="center"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:weightSum="1">
              <ImageView
                  android:layout_gravity="left"
                  android:layout_width="60dp"
                  android:layout_height="60dp"
                  android:src="@drawable/pasajeros"/>
              <TextView
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.4"
                  android:textAppearance="@style/TextAppearance.AppCompat.Small"
                  android:textStyle="bold"
                  android:gravity="left"
                  android:text="@string/quantity"/>

              <Spinner
                  android:textAppearance="@style/TextAppearance.AppCompat.Large"
                  android:gravity="center|right"
                  android:id="@+id/spQuantity"
                  android:layout_width="0dip"
                  android:layout_weight="0.5"
                  android:layout_height="wrap_content"/>
          </LinearLayout>

          <Button
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:id="@+id/botonAnadir"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:background="@drawable/bk_boton_plano"
              android:stateListAnimator="@null"
              android:text="@string/boton_reservar_actividadPaquete"/>
      </LinearLayout>

    </LinearLayout>
</ScrollView>