<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
       <LinearLayout
           android:id="@+id/herramientas"
           android:layout_alignParentTop="true"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:background="@color/orange"
                   android:textColor="@color/color_light"
                   android:text="@string/Mensaje"
                   android:gravity="center"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:textStyle="bold"
                   android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
               <Button
                   android:layout_width="40dp"
                   android:background="@android:drawable/ic_menu_send"
                   android:layout_height="40dp"
                   android:id="@+id/buttonShare"
                   android:layout_gravity="right"/>
           </LinearLayout>
           <LinearLayout
               android:paddingLeft="16dp"
               android:paddingTop="8dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:weightSum="1">
               <TextView
                   android:paddingRight="5dp"
                   android:textStyle="bold"
                   android:textAppearance="@style/TextAppearance.AppCompat.Small"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.2"
                   android:text="@string/To"/>
               <EditText
                   android:paddingLeft="5dp"
                   android:editable="false"
                   android:minWidth="@dimen/activity_horizontal_margin"
                   android:inputType="textEmailAddress"
                   android:layout_width="180dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/To"
                   android:textStyle="italic"
                   android:background="@android:drawable/editbox_background"
                   android:text="reservas@footpathperu.com"/>
               <ImageView
                   android:visibility="invisible"
                   android:id="@+id/error1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@android:drawable/ic_delete"/>
           </LinearLayout>
           <LinearLayout
               android:paddingLeft="16dp"
               android:paddingTop="8dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:paddingRight="5dp"
                   android:textStyle="bold"
                   android:textAppearance="@style/TextAppearance.AppCompat.Small"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/Asunto"/>
               <EditText
                   android:paddingLeft="5dp"
                   android:textStyle="italic"
                   android:minWidth="@dimen/activity_horizontal_margin"
                   android:inputType="textEmailSubject"
                   android:layout_width="180dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/Subjet"
                   android:background="@android:drawable/editbox_background"/>
               <ImageView
                   android:visibility="invisible"
                   android:id="@+id/error2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@android:drawable/ic_delete"/>
           </LinearLayout>
           <TextView
               android:paddingRight="5dp"
               android:paddingLeft="16dp"
               android:textStyle="bold"
               android:textAppearance="@style/TextAppearance.AppCompat.Small"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="0.2"
               android:text="@string/Mensaje"/>
           <MultiAutoCompleteTextView
               android:layout_margin="3dp"
               android:textStyle="italic"
               android:inputType="text"
               android:paddingTop="8dp"
               android:background="@android:drawable/editbox_background_normal"
               android:id="@+id/comentario"
               android:layout_centerHorizontal="true"
               android:visibility="visible"
               android:layout_width="fill_parent"
               android:layout_height="230dp" />

           <LinearLayout
               android:layout_marginTop="16dp"
               android:background="@color/orange"
               android:layout_gravity="center|bottom"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:weightSum="1">
               <TextView
                   android:paddingRight="5dp"
                   android:paddingLeft="16dp"
                   android:textColor="@color/color_light"
                   android:text="@string/Enlace"
                   android:layout_gravity="center"
                   android:layout_width="0dip"
                   android:layout_weight="0.4"
                   android:layout_height="wrap_content"
                   android:textStyle="bold"
                   android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
               <Button
                   android:layout_width="0dip"
                   android:layout_weight="0.2"
                   android:layout_height="50dp"
                   android:id="@+id/buttonFacebook"
                   android:background="@drawable/social_facebook"
                   android:layout_gravity="center"/>

               <Button
                   android:layout_width="0dip"
                   android:layout_weight="0.2"
                   android:layout_height="50dp"
                   android:id="@+id/buttontwitter"
                   android:background="@drawable/twitter"
                   android:layout_gravity="center"/>

               <Button
                   android:layout_width="0dip"
                   android:layout_weight="0.2"
                   android:layout_height="50dp"
                   android:id="@+id/buttonwhatsapp"
                   android:background="@drawable/whatsapp_socialnetwork"
                   android:layout_gravity="center"/>
           </LinearLayout>
       </LinearLayout>

</ScrollView>